[package]
name = "likh"
version = "0.1.3"
authors = ["Jagadeesh Kotra <jagadeesh@maxfunc.com>"]
license = "MIT"
description = "library to read and write to text and CSV files."
repository = "https://github.com/jkotra/likh"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
